// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`splitTWAMMOrder > various pools > one pool 1`] = `
[
  {
    "amount": "1000000000000000000",
    "fee": "1",
  },
]
`;

exports[`splitTWAMMOrder > various pools > three pools, diff liquidity, maxSplits 3, check rounding 1`] = `
[
  {
    "amount": "166666666666666672",
    "fee": "1",
  },
  {
    "amount": "333333333333333329",
    "fee": "2",
  },
  {
    "amount": "500000000000000000",
    "fee": "3",
  },
]
`;

exports[`splitTWAMMOrder > various pools > three pools, diff liquidity, maxSplits 3, check rounding 2`] = `
[
  {
    "amount": "333333333333333360",
    "fee": "1",
  },
  {
    "amount": "666666666666666666",
    "fee": "2",
  },
  {
    "amount": "999999999999999975",
    "fee": "3",
  },
]
`;

exports[`splitTWAMMOrder > various pools > three pools, diff liquidity, maxSplits 3, check rounding 3`] = `
[
  {
    "amount": "16666666666666668000",
    "fee": "1",
  },
  {
    "amount": "33333333333333333333",
    "fee": "2",
  },
  {
    "amount": "49999999999999998668",
    "fee": "3",
  },
]
`;

exports[`splitTWAMMOrder > various pools > three pools, one with 4x liquidity, maxSplits 2 1`] = `
[
  {
    "amount": "200000000000000001",
    "fee": "0",
  },
  {
    "amount": "799999999999999999",
    "fee": "1",
  },
]
`;

exports[`splitTWAMMOrder > various pools > two pools, one with 4x liquidity 1`] = `
[
  {
    "amount": "200000000000000001",
    "fee": "2",
  },
  {
    "amount": "799999999999999999",
    "fee": "1",
  },
]
`;

exports[`splitTWAMMOrder > various pools > two pools, same liquidity 1`] = `
[
  {
    "amount": "500000000000000000",
    "fee": "2",
  },
  {
    "amount": "500000000000000000",
    "fee": "1",
  },
]
`;

exports[`splitTWAMMOrder > various pools > two pools, same liquidity, different rates, maxSplits 1 1`] = `
[
  {
    "amount": "1000000000000000000",
    "fee": "1",
  },
]
`;

exports[`splitTWAMMOrder > various pools > two pools, same liquidity, maxSplits 2, check rounding 1`] = `
[
  {
    "amount": "500000000000000000",
    "fee": "2",
  },
  {
    "amount": "500000000000000001",
    "fee": "1",
  },
]
`;
